# ChangeLog for app-office/radicale
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Mar 2012; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.4.ebuild,
  metadata.xml:
  Version bump.

*radicale-0.6.4 (09 Mar 2012)

  09 Mar 2012; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.4.ebuild:
  Version bump.

*radicale-0.6.3 (02 Dec 2011)

  02 Dec 2011; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.3.ebuild:
  Version bump.

  20 Oct 2011; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.2.ebuild,
  +files/radicale.init.d, +metadata.xml:
  New version for testing purposes.

  20 Oct 2011; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.2.ebuild,
  +files/radicale.init.d:
  New version for testing purposes.

*radicale-0.6.2 (11 Oct 2011)

  11 Oct 2011; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.2.ebuild,
  +files/radicale.init.d:
  Add new version from bug 322811 for testing purposes.
