@@ -2,6 +2,11 @@
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*radicale-0.7 (02 Jun 2012)
+
+  02 Jun 2012; Hans de Graaff <graaff@gentoo.org> +radicale-0.7.ebuild:
+  Version bump.
+
   09 Mar 2012; Hans de Graaff <graaff@gentoo.org> +radicale-0.6.4.ebuild,
   metadata.xml:
   Version bump.
